# torch-dev

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/configs/: train.yaml
src/configs/callbacks/: best_model_checkpoint.yaml  default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  tqdm.yaml
src/configs/hydra/: default.yaml
src/configs/logger/: mlflow.yaml
src/configs/model/: image_classifier.yaml
src/configs/mruns/: mnist_hparams.yaml
src/configs/paths/: default.yaml
src/configs/task/: mnist.yaml
src/configs/trainer/: default.yaml  sanity_check.yaml
src/modules/: train.py
src/modules/data/: mnist_datamodule.py
src/modules/model/: image_classifier.py
src/modules/model/nets/: dense_net.py
src/modules/utils/: checkpoints.py  configs.py  console.py  custom_log.py  instantiators.py  metrics.py
tests/: conftest.py  test_configs.py  test_image_classifier.py  test_mnist_datamodule.py
